<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="start_button">Start Game</string>
    <string name="restart_button">Restart</string>
    <string name="player_turn">X TURN</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="match_ties">TIES</string>
    <string name="player_1_score">0</string>
    <string name="match_ties_score">0</string>
    <string name="player_2_score">0</string>
    <string name="player_1_name">Enter Player 1 Name (X)</string>
    <string name="player_2_name">Enter Player 2 Name (O)</string>
    <string name="developer">Developer</string>
    <string name="play_with_friend">Vs Friend</string>
    <string name="play_with_computer">Vs Computer</string>

</resources>