<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".PlayerInputActivity">


    <RadioGroup
        android:id="@+id/game_mode_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/radio_vs_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_with_friend"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_vs_computer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_with_computer"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/game_mode_group"

        >

<!--        app:layout_constraintEnd_toEndOf="parent"parentt-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/player1_name"-->

    <EditText
        android:id="@+id/player1_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:gravity="center"
        android:hint="@string/player_1_name"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/teal"
        android:textColorHint="@color/teal"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/player2_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:gravity="center"
        android:hint="@string/player_2_name"
        android:inputType="text"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="224dp"
        android:layout_height="65dp"
        android:layout_marginBottom="77dp"
        android:backgroundTint="@color/black"
        android:text="@string/start_button"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral60"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/linkedin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/linked_in_logo" />

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/insta_logo" />

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/twitter_logo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
