<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".MainActivity">


    <!--    Top Linear Layout-->

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:padding="16dp"
        app:columnCount="1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:rowCount="3"
        tools:layout_editor_absoluteX="0dp">

        <!-- row 1-->

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal"
            android:weightSum="3">


            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>
        <!-- row 2-->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <!--        row 3-->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <!--        Player 1 Result Frame-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/dark_background"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_1"
                android:textColor="@color/teal"
                android:textSize="25sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/player_1_score"
                android:textColor="@color/teal"
                android:textSize="35sp" />

        </LinearLayout>


        <!--        Ties Frame-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/dark_background"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/match_ties"
                android:textColor="@color/gray"
                android:textSize="25sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/match_ties_score"
                android:textSize="35sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/dark_background"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_2"
                android:textColor="@color/yellow"
                android:textSize="25sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/player_2_score"
                android:textSize="35sp"
                android:textColor="@color/yellow"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">




        <!--        display whose turn -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/player_turn"
                android:textSize="23sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/restartButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:onClick="restartGame"
                android:text="@string/restart_button"
                android:textColor="@color/textcolor"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
